<resources>
    <string name="app_name">Stylish</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logout">Log Out</string>
    <string name="title_activity_splash_screen">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_google_map">Map</string>
    <string name="title_activity_maps">Map</string>

    <string name="Option1">Saloon</string>
    <string name="Option2">Spa</string>
    <string name="Option3">Parlour</string>


    <string name="button">Get Appointment Date</string>
    <string name="button1">Get Appointment Time</string>
    <string name="buttonSPIN">Select Your Area</string>
    <string name="text"></string>
    <string name="text1"></string>
    <string name="text2">You selected:</string>


    //items for spin list

    <string-array name="Area_list">
        <item>Bashundhara R/A
        </item>
        <item>Gulshan</item>
        <item>Dhanmondi</item>
        <item>Banani</item>
        <item>Uttara</item>
        <item>Baridhara</item>
        <item>Mirpur</item>
        <item>Malibagh</item>
        <item>Siddhesswari</item>
        <item>Maghbazar</item>
        <item>Khilgaon</item>
        <item>Kamlapur</item>
        <item>Jatrabari</item>
        <item>Mohammadpur</item>
        <item>Adabor</item>
    </string-array>


</resources>
