<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quantum_lightgreen"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinid"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content">
    </Spinner>

    <Button
        android:id="@+id/spinbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSPIN"
        android:layout_gravity="center"
        android:background="@color/Aqua"
        android:textColor="@color/Black"
        android:padding="20dp"
        >

    </Button>

    <TextView
        android:id="@+id/spinttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/text2"
        android:layout_marginTop="20dp"
        >

    </TextView>




    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text" />



    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1" />
</LinearLayout>