<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707"
    tools:context=".DateAndTime">

    <TextView
        android:id="@+id/Name2TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="ShopName"
        android:textColor="#F3EEEE"
        android:textSize="20dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/Address2TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#F5F2F2"
        android:textSize="20dp"
        android:text="ShopAddress" />

    <TextView
        android:id="@+id/Phone2TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ShopPhone"
        android:textSize="20dp"
        android:textColor="#E7E0E0"
        android:layout_gravity="center"/>


    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:background="#2196F3"
        android:textColor="#f5f5f5"
        android:textSize="20sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:layout_height="150dp"
        android:padding="20dp"
        android:text="@string/button" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#03A9F4"
        android:textSize="30dp"

        android:text="@string/text" />



    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#E91E63"
        android:textSize="30dp"
        android:text="@string/text1" />

    <Button
        android:id="@+id/locationBTN"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Get your current location"
        android:background="#03A9F4"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        />


    <ImageView
        android:id="@+id/logout"
        android:onClick="logout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/logout"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

</LinearLayout>